# pastor

./: README.md  meson.build  org.pastor.Pastor.json
data/: meson.build  org.pastor.Pastor.appdata.xml.in  org.pastor.Pastor.desktop.in  org.pastor.Pastor.gresource.xml  org.pastor.Pastor.gschema.xml  style.css
data/icons/: meson.build
data/ui/: window.ui
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  request.vala  window.vala
src/api/: pastebin.viradev.ir.vala
